[package]
name = "rapidsync"
version = "0.1.1-alpha1"
edition = "2021"
authors = ["Edward Coristine <edward@packetware.net>"]
description = "Rapid & threadsafe embedded data stores"
license = "MIT"
categories = ["sync", "threadsafe", "hashmap"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
