[package]
name = "rapidsync"
version = "0.1.9-alpha1"
edition = "2021"
authors = ["Edward Coristine <edward@packetware.net>"]
description = "Rapid & threadsafe embedded data stores"
license = "MIT OR Apache-2.0"
categories = ["sync", "threadsafe", "hashmap"]
homepage = "https://botnet.blog"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
